Added files via upload

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 	<body>
 	<p>
 	Hi! I am Thanos. I study pharmaceutical engineering and I love windows 10!!
+	</br>
 	See ya!! :)
 	</p>
-	<img src="amazing_thanos.jpg" alt="Windows 10 lover" style="width:255px;height:228px;">
+	<img src="amazing_thanos.jpg" alt="Windows 10 lover" style="width:228px;height:228px;">
 	</br>
-	<a class="btn btn-lg" href="http://nbviewer.jupyter.org/gist/atahoualpi/f1a37a8fba1bd8a598c03083c87c75f3">My LinkedIn page</a>
+	<a class="btn btn-lg" href="https://www.linkedin.com/in/aaramp?authType=name&authToken=xUjA&trk=contacts-contacts-list-contact_name-0">My LinkedIn page</a>
 	</body>
 	</html>
