--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
 	<head>
 	<meta charset="utf-8">
 		<title>Thanos</title>
+		<style type="text/css">
+		p {
+			color: #377387;
+			font-size: 12px;
+			font-weight: bold;
+			font-family: FontAwesome;
+		}
+		.axis path,
+		.axis line {
+		  fill: none;
+		  stroke: #000;
+		  shape-rendering: crispEdges;
+		}
+
+		.bar {
+		  fill: steelblue;
+		}
+
+		.x.axis path {
+		  display: none;
+		}
+				</style>
 	</head>
 	<body>
 	<p>
@@ -15,5 +37,136 @@
 	<a class="btn btn-lg" href="https://www.linkedin.com/in/aaramp?authType=NAME_SEARCH&authToken=rpFW&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A468942260%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1461075355958%2Ctas%3Aathana">My LinkedIn page</a>
 	</br>
 	I also like cooking!
+	</br>
+	<script>
+
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    width = 800 - margin.left - margin.right,
+    height = 500 - margin.top - margin.bottom;
+
+var x = d3.scale.ordinal()
+    .rangeRoundBands([0, width], .1);
+
+var y = d3.scale.linear()
+    .rangeRound([height, 0]);
+
+var color = d3.scale.ordinal()
+    .range(["#7b6888", "#a05d56", "#ff8c00"]);
+
+var xAxis = d3.svg.axis()
+    .scale(x)
+    .orient("bottom");
+
+var yAxis = d3.svg.axis()
+    .scale(y)
+    .orient("left")
+    .tickFormat(d3.format(".2s"));
+
+var svg = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+d3.csv("cooking.csv", function(error, data) {
+  if (error) throw error;
+console.log(data);
+
+  color.domain(d3.keys(data[0]).filter(function(key) { return key !== "Day"; }));
+
+  data.forEach(function(d) {
+    var y0 = 0;
+    var temp = []
+    d.food = color.domain().map(function(name) { 
+      return {name:name, y0:y0, y1:y0 += +d[name]};});
+    d.total = d.food[d.food.length - 1].y1;
+  });
+  data.sort(function(a, b) { return b.total - a.total; });
+
+  x.domain(data.map(function(d) { return d.Day; }));
+  y.domain([0, d3.max(data, function(d) { return d.total; })]);
+
+
+  var day = svg.selectAll(".day")
+      .data(data)
+    .enter().append("g")
+      .attr("class", "g")
+      .attr("transform", function(d) { return "translate(" + x(d.Day) + ",0)"; });
+
+  day.selectAll("rect")
+      .data(function(d) { 
+        return d.food; })
+    .enter().append("rect")
+      .attr("width", x.rangeBand())
+      .attr("y", function(d) { return y(d.y1); })
+      .attr("height", function(d) { 
+          return y(d.y0) - y(d.y1); 
+        })
+        
+      .style("fill", function(d) { return color(d.name); });
+
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + 450 + ")")
+      .call(xAxis)
+      .selectAll("text")  
+            .style("text-anchor", "end")
+            .attr("dx", "3em")
+            .attr("dy", ".45em")
+            .attr("transform", function(d) {
+                return "rotate(-20)" 
+                });
+
+
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+    .append("text")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end");
+    //axis labels
+        svg.append("text")
+          .attr("class", "x label")
+          .attr("text-anchor", "middle")
+          .attr("x", width/2)
+          .attr("y", 0)
+          .text("What I eat every day")
+          .attr("font-family", 'FontAwesome')
+          .attr("font-size", "14px")
+        svg.append("text")
+          .attr("class", "y label")
+          .attr("text-anchor", "middle")
+          .attr("x", -width/4)
+          .attr("y", -40)
+          .attr("dy", ".75em")
+          .attr("transform", "rotate(-90)")
+          .text("Types of Food")
+          .attr("font-family", 'FontAwesome')
+          .attr("font-size", "14px")
+
+  var legend = svg.selectAll(".legend")
+      .data(color.domain().slice().reverse())
+    .enter().append("g")
+      .attr("class", "legend")
+      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+
+  legend.append("rect")
+      .attr("x", width - 18)
+      .attr("width", 18)
+      .attr("height", 18)
+      .style("fill", color);
+
+  legend.append("text")
+      .attr("x", width - 24)
+      .attr("y", 9)
+      .attr("dy", ".35em")
+      .style("text-anchor", "end")
+      .text(function(d) { return d; });
+
+});
+
+</script>
 	</body>
 	</html>
