--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 		<title>Thanos</title>
+		<script type="text/javascript" src="d3/d3.js"></script>
 		<style type="text/css">
 		p {
 			color: #377387;
