--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ console.log(data);
       return {name:name, y0:y0, y1:y0 += +d[name]};});
     d.total = d.food[d.food.length - 1].y1;
   });
-  data.sort(function(a, b) { return b.total - a.total; });
+  // data.sort(function(a, b) { return b.total - a.total; });
 
   x.domain(data.map(function(d) { return d.Day; }));
   y.domain([0, d3.max(data, function(d) { return d.total; })]);
