Added files via upload

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@ console.log(data);
       .call(xAxis)
       .selectAll("text")  
             .style("text-anchor", "end")
-            .attr("dx", "3em")
+            .attr("dx", "2em")
             .attr("dy", ".45em")
-            .attr("transform", function(d) {
-                return "rotate(-20)" 
-                });
+            // .attr("transform", function(d) {
+            //     return "rotate(-20)" 
+            //     });
 
 
   svg.append("g")
