--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</br>
 	See ya!! :)
 	</p>
-	<img src="amazing_thanos.jpg" alt="Windows 10 lover" style="width:228px;height:228px;">
+	<img src="smiley.jpg" alt="Windows 10 lover" style="width:228px;height:228px;">
 	</br>
 	<a class="btn btn-lg" href="https://www.linkedin.com/in/aaramp?authType=NAME_SEARCH&authToken=rpFW&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A468942260%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1461075355958%2Ctas%3Aathana">My LinkedIn page</a>
 	</br>
