Added files via upload

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 	<meta charset="utf-8">
-		<title>Thanos</title>
+		<title>Vaios</title>
 		<script type="text/javascript" src="d3/d3.js"></script>
 		<style type="text/css">
 		p {
@@ -29,13 +29,13 @@
 	</head>
 	<body>
 	<p>
-	Hi! I am Thanos. I study pharmaceutical engineering and I love windows 10!!
+	Hi! I am Vaios. I study acoustics engineering and I love ubuntu!!
 	</br>
 	See ya!! :)
 	</p>
-	<img src="smiley.jpg" alt="Windows 10 lover" style="width:228px;height:228px;">
+	<img src="smiley.jpg" alt="Windows 10 lover" style="width:228px;height:200px;">
 	</br>
-	<a class="btn btn-lg" href="https://www.linkedin.com/in/aaramp?authType=NAME_SEARCH&authToken=rpFW&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A468942260%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1461075355958%2Ctas%3Aathana">My LinkedIn page</a>
+	<a class="btn btn-lg" href="https://www.google.dk/">My Google page</a>
 	</br>
 	I also like cooking!
 	</br>
